--- a/trial.html
+++ b/trial.html
@@ -1,7 +1,7 @@
 <DOCTYPE!>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="finalproject.css">
+  <link rel="stylesheet" type="text/css" href="modules.css">
 </head>
   <body>
     <div id="container">
@@ -11,6 +11,6 @@
       <canvas id ="myCanvas">
       </canvas>
     </div>
-    <script src="finalproject.js"></script>
+    <script src="trial.js"></script>
   </body>
 </html>
